# odin-control

./: .codeclimate.yml  .codecov.yml  .coveragerc  .coveragerc-py27  .disable-travis.yml  .gitattributes  .gitignore  .travis.yml  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  properdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  switcher.json  tox.ini
.github/workflows/: docs.yml  pypi_publish.yml  test_odin_control.yml
developer-guide/: index.html
docs/: .buildinfo  Makefile  conf.py  genindex.html  getting-started.md  index.html  index.md  index.rst  objects.inv  search.html  searchindex.js  sphinx.yaml
docs/.doctrees/: environment.pickle  index.doctree
docs/_sources/user/: index.md.txt
docs/_static/: documentation_options.js
docs/developer/: index.html  index.md
docs/developer-guide/: index.md
docs/developer/explanations/: index.html  index.md  overview.md  parameter-tree.md
docs/developer/how-to/: index.html
docs/developer/reference/: index.html
docs/developer/tutorials/: index.html  write-detector-support.md
docs/scripts/: gen_ref_pages.py
docs/server_ref/: modules.rst  odin.adapters.rst  odin.config.rst  odin.http.routes.rst  odin.http.rst  odin.rst
docs/user/: index.html  index.md
docs/user-guide/: index.md  installation.md  key-concepts.md
docs/user/explanations/: index.html
docs/user/how-to/: index.html
docs/user/reference/: index.html
docs/user/tutorials/: build.html  deploy.html  index.html  run.html  tools.md
documentation/: .buildinfo  genindex.html  index.html  objects.inv  search.html
documentation/.doctrees/: environment.pickle
documentation/.doctrees/developer/: index.doctree
documentation/.doctrees/user/: index.doctree
documentation/_sources/developer/: index.md.txt
documentation/_static/: documentation_options.js
documentation/developer/: index.html
documentation/developer/explanations/: index.html
documentation/developer/how-to/: index.html
documentation/developer/reference/: index.html
documentation/developer/tutorials/: index.html
documentation/user/: index.html
documentation/user/explanations/: index.html
documentation/user/how-to/: index.html
documentation/user/reference/: index.html
documentation/user/tutorials/: build.html  deploy.html  index.html  run.html
etc/init.d/: supervisor_debian.init
etc/supervisor/: supervisord.conf
etc/supervisor/conf.d/: odin_server.conf
getting-started/: index.html
odin/: _version.py  server.py  util.py
odin/adapters/: adapter.py  dummy.py  iac_dummy.py  iac_dummy_target.py  metadata_tree.py  parameter_tree.py  proxy.py  system_info.py  system_status.py
odin/http/: server.py
odin/http/routes/: api.py  default.py
odin/testing/: test_server.py  test_util.py  utils.py
odin/testing/adapters/: test_adapter.py  test_dummy.py  test_iac_dummy.py  test_iac_dummy_target.py  test_metadata_tree.py  test_parameter_tree.py  test_proxy.py  test_system_info.py  test_system_status.py
odin/testing/config/: test_adapter_communication.cfg  test_config.py  test_proxy.cfg  test_system_status.cfg
odin/testing/routes/: test_api.py  test_default.py  test_route.py
plugins/excalibur/: setup.cfg  setup.py
plugins/excalibur/excalibur/: adapter.py  detector.py
plugins/excalibur/fem/: client.py
plugins/excalibur/fem_api_source/: ExcaliburFemClient.cpp  ExcaliburFemClient.h  FemApiError.cpp  FemApiError.h  FemException.h  femApi.cpp  femApi.h  fem_api_wrapper.c
plugins/excalibur/testing/: test_fem.py
reference/: index.html
reference/odin_control/_version/: index.html
reference/odin_control/logconfig/: index.html
reference/odin_control/main/: index.html
reference/odin_control/util/: index.html
search/: search_index.json
server/: requirements.txt  server.py  setup.cfg  setup.py
server/app/: api_server.py
server/odin/: __init__.py  server.py
server/odin/adapters/: __init__.py  adapter.py  dummy.py  parameter_tree.py  system_info.py
server/odin/config/: parser.py
server/odin/http/: __init__.py  server.py
server/odin/static/: index.html
server/odin/testing/: test_api_dispatcher.py  test_server.py  utils.py
src/odin/: __init__.py  _version.py  async_util.py  main.py  server.py  util.py
src/odin/adapters/: adapter.py  async_adapter.py  async_dummy.py  async_parameter_tree.py  async_proxy.py  base_parameter_tree.py  base_proxy.py  dummy.py  metadata_writer.py  parameter_tree.py  proxy.py  system_info.py  system_status.py
src/odin/config/: __init__.py  parser.py
src/odin/http/: server.py
src/odin_control/: logconfig.py  main.py  util.py
src/odin_control/adapters/: __init__.py  adapter.py  async_adapter.py  async_base_controller.py  async_dummy.py  (+13 more)
stylesheets/: extra.css
tests/: async_utils.py  conftest.py  ssl_utils.py  test_server.py  test_util.py  test_util_py3.py  utils.py  utils_async_py3.py
tests/adapters/: test_adapter.py  test_async_adapter.py  test_async_adapter_py3.py  test_async_base_controller.py  test_async_dummy.py  test_async_dummy_py3.py  test_async_parameter_tree.py  test_async_parameter_tree_py3.py  test_async_proxy.py  test_async_proxy_py3.py  test_base_controller.py  test_dummy.py  test_metadata_writer.py  test_parameter_tree.py  test_proxy.py  test_request.py  test_response.py  test_system_info.py  test_system_status.py  test_util.py
tests/config/: test.cfg  test_adapter_communication.cfg  test_async.cfg  test_async_proxy.cfg  test_config.py  test_https.cfg  test_metadata_injector.cfg  test_proxy.cfg  test_system_info.cfg  test_system_status.cfg
tests/handlers/: api_test_handler.py  fixtures.py  test_api.py  test_api_adapter_info.py  test_api_adapter_list.py  test_api_py2.py  test_api_py3.py  test_api_version.py  test_base.py  test_cors_request.py
tests/routes/: test_api.py  test_async_api.py  test_async_api_py3.py  test_default.py  test_route.py
tests/static/: index.html
user-guide/: index.html
user-guide/configuration/: index.html
user-guide/installation/: index.html
user-guide/key-concepts/: index.html
utils/: migrate_adapter
(+83 files in other folders)
