[metadata]
name = odin-control
description = ODIN detector control system
url = https//github.com/odin-detector/odin-control
author = Tim Nicholls
author_email = tim.nicholls@stfc.ac.uk
license = Apache License 2.0
long_description = file: README
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =src

install_requires =
    futures;python_version<'3'
    future
    pyzmq>=17.1.0
    tornado>=4.3
    psutil>=5.0

[options.extras_require]
dev =
    mock;python_version<'3'
    requests
    tox
    pytest-asyncio
    pytest-cov

[options.packages.find]
where = src

[options.entry_points]
# Include a command line script
console_scripts =
    odin_server = odin.server:main_deprecate
    odin_control = odin.server:main

[flake8]
max-line-length = 100

[tool:pytest]
asyncio_mode = strict

[coverage:run]
omit = **/odin/_version.py
# Note only applies when running pytest - for tox run it is overriden in the ini config
data_file = /tmp/odin.coverage

[coverage:paths]
# Tests are run from installed location, map back to the src directory
source =
    src
    **/site-packages/

[versioneer]
VCS = git
style = pep440
versionfile_source = src/odin/_version.py
versionfile_build = odin/_version.py
tag_prefix=

